# dialaifriend

./: .env.example  README.md  background_agent_client.py  main.py  mcp_integration.py  pyproject.toml  server.sh  voice_personalities.py
tests/: test_main.py  test_voice_personalities.py
