[project]
name = "dial-aifriend"
version = "0.1.0"
description = "AI Voice Assistant for Toddlers - Phone conversations with personality-driven AI voices"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
]
