[project]
name = "dial-aifriend"
version = "0.1.0"
description = "AI Voice Assistant - Phone-based technical assistant powered by OpenAI Realtime API and Twilio"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
]
